Fix collapsing class for the navbar.

--- a/refinery/static/source/styles/less/refinery-style.less
+++ b/refinery/static/source/styles/less/refinery-style.less
@@ -110,8 +110,9 @@ ol, ul {
 .navbar-collapse.collapse {
   height: auto;
   overflow: visible;
-  width: 450px;
+  width: 400px;
   float: left;
+  border: none;
 }
 
 .collapse {
@@ -119,6 +120,11 @@ ol, ul {
   height: 0;
   overflow: hidden;
   transition: height .35s ease;
+}
+
+.collapsing {
+  overflow: visible;
+  border: none;
 }
 
 .btn.navbar-btn{
