--- a/refinery/static/source/styles/less/variables.less
+++ b/refinery/static/source/styles/less/variables.less
@@ -214,7 +214,7 @@
 
 // Navbar
 // -------------------------
-@navbar-collapse-width:             979px;
+@navbar-collapse-width:             768px;
 @navbar-collapse-desktop-width:      @navbar-collapse-width + 1;
 
 @navbar-height:                    40px;
